--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "jquery": "^3.5.0",
+    "mkdirp": "^1.0.4",
     "multiparty": "^4.2.1",
     "sqlite": "^3.0.6",
     "upper-case": "^2.0.1"
